gststructure: rejig test ordering for speed

https://bugzilla.gnome.org/show_bug.cgi?id=662777